[project]
name = "pols"
version = "0.1.0"
description = "List directory contents as Polars DataFrames"
readme = "README.md"
authors = [
    { name = "Louis Maddox", email = "louismmx@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pls = "pls:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
